--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script defer src='script.js'></script>
-    <link rel= 'stylesheet' href='style.css'/>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LNL quizz factory</title>
+    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="container-quiz">
+      <div class="question">Qu'est-ce que le HTML ?</div>
+
+      <div class="options">
+        <button>
+          Un langage de programmation utilisé pour rendre les pages web
+          interactives.
+        </button>
+        <button>
+          Un langage de balisage utilisé pour structurer le contenu d'une page
+          web.
+        </button>
+        <button>
+          Un langage de style utilisé pour personnaliser l'apparence des sites
+          web.
+        </button>
+        <button>
+          Un langage de base de données utilisé pour stocker des informations.
+        </button>
+      </div>
+      <div class="container-button">
+        <button id="next-button">Suivant</button>
+      </div>
+    </div>
+  </body>
 </html>
