--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src='script.js'></script>
-    <link rel= 'stylesheet' href='style.css'/>
-</head>
-<body>
+    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div>
-        <h1>Bonjours l'equipe LNL QUIZ FACTORY</h1>
+      <ul>
+        <li>zocnsonc</li>
+        <li class="je sais pas"></li>
+        <li class="je sais pas"></li>
+        <li id="fdgsfgs"></li>
+        <li></li>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
