--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LNL quizz factory</title>
-    <script defer src="question.js"></script>
+    <script defer type="module" src="question.js"></script>
+    <script defer type="module" src="game.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
