nettoyage html + modification game.js : classList

--- a/index.html
+++ b/index.html
@@ -10,25 +10,10 @@
   </head>
   <body>
     <div id="container-quiz">
-      <div class="question">Qu'est-ce que le HTML ?</div>
+      <div class="question" id="question-text">Qu'est-ce que le HTML ?</div>
 
-      <div class="options">
-        <button>
-          Un langage de programmation utilisé pour rendre les pages web
-          interactives.
-        </button>
-        <button>
-          Un langage de balisage utilisé pour structurer le contenu d'une page
-          web.
-        </button>
-        <button>
-          Un langage de style utilisé pour personnaliser l'apparence des sites
-          web.
-        </button>
-        <button>
-          Un langage de base de données utilisé pour stocker des informations.
-        </button>
-      </div>
+      <div class="options" id="options-container"></div>
+
       <div class="container-button">
         <button id="next-button">Suivant</button>
       </div>
