--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LNL quizz factory</title>
+    <title>LNL Quizz Factory</title>
     <script defer type="module" src="question.js"></script>
     <script defer type="module" src="game.js"></script>
     <link rel="stylesheet" href="style.css" />
