--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script defer type="module" src="question.js"></script>
     <script defer type="module" src="game.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"
+    ></script>
   </head>
   <body>
     <div id="container-quiz">
